# feedrelay

./: .dockerignore  .env.example  CONTEXT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
docs/adr/: 0001-apalis-sqlite-queue.md
migrations/: 001_init.sql
plans/: prd_feedrelay_web_server.md
src/: auth.rs  config.rs  error.rs  filter.rs  main.rs  pipeline.rs  telemetry.rs
src/buffer/: client.rs  mod.rs  mutations.rs
src/caption/: mod.rs  openai.rs  prompt.rs
src/immich/: client.rs  mod.rs  search.rs  types.rs
src/jobs/: mod.rs  run.rs
src/routes/: health.rs  mod.rs  pic.rs  trigger.rs
src/storage/: db.rs  repo.rs
