[package]
name = "feedrelay"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding (for OpenAI inline image data URLs)
base64 = "0.22"

# Background job queue (SQLite-backed)
apalis = "1.0.0-rc.9"
apalis-sqlite = "1.0.0-rc.8"

# UUID generation for pending_media tokens
uuid = { version = "1", features = ["v4"] }

# Random selection for candidate picking
rand = "0.9"

# ULID generation for run IDs
ulid = "1"

# Constant-time byte comparison (timing-safe token check)
subtle = "2"

# Per-request tracing spans (http.request)
tracing-actix-web = "0.7"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = { version = "4", features = ["macros"] }
actix-http = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
